# StableMotion

./: .gitignore  CLAUDE.md  pyproject.toml  setup_dlc_pipeline.py  test_dlc_encoding_visualization.py
data_loaders/: dlc_keypoint_feats.py  get_data.py  globsmpl_dataset.py  smpl_collate.py
sample/: fix_dlc.py  fix_globsmpl.py  utils.py
src/stablemotion/: __init__.py  create_labeled_video.py  visualize_reconst.py
train/: train_stablemotion_smpl_glob.py
utils/: model_util.py  parser_util.py
