[project]
name = "stablemotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arashsm79", email = "arashmoslehian@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "blobfile==3.0.0",
    "diffusers==0.30.2",
    "einops>=0.8.1",
    "ema-pytorch>=0.7.7",
    "hydra-core==1.3.2",
    "matplotlib==3.6.0",
    "moviepy==1.0.3",
    "numpy>=1.23.5",
    "omegaconf>=2.3.0",
    "opencv-python==4.10.0.84",
    "pandas>=2.3.3",
    "pyrender==0.1.45",
    "pytorch-lightning>=2.5.6",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "smplx>=0.1.28",
    "tables>=3.10.2",
    "tensorboard==2.17.1",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "trimesh>=4.10.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
